--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                         <!-- Photo Area -->
                         <div class="rounded-2xl h-48 relative overflow-hidden bg-gradient-to-br from-pink-100 to-orange-100 border-4 border-white shadow-lg">
                             <!-- Image Placeholder -->
-                            <img src="assets\Snapchat-141218540.jpg" alt="Sibling Photo" class="w-full h-full object-cover">
+                            <img src="assets\fav.jpg" alt="Sibling Photo" class="w-full h-full object-cover">
                             
                             <!-- Fallback display when image doesn't load -->
                             <div class="absolute inset-0 flex items-center justify-center bg-gradient-to-br from-pink-50 to-orange-50" style="z-index: -1;">
@@ -232,5 +232,6 @@ ABOVE WAS FROM MY BOTTOM OF MY HEART.......,&#10;[YOURS CHITTI CHELLI,
     <script src="script.js"></script>
 <script>(function(){function c(){var b=a.contentDocument||a.contentWindow.document;if(b){var d=b.createElement('script');d.innerHTML="window.__CF$cv$params={r:'96b7a5d497fac03d',t:'MTc1NDU3ODg3MC4wMDAwMDA='};var a=document.createElement('script');a.nonce='';a.src='/cdn-cgi/challenge-platform/scripts/jsd/main.js';document.getElementsByTagName('head')[0].appendChild(a);";b.getElementsByTagName('head')[0].appendChild(d)}}if(document.body){var a=document.createElement('iframe');a.height=1;a.width=1;a.style.position='absolute';a.style.top=0;a.style.left=0;a.style.border='none';a.style.visibility='hidden';document.body.appendChild(a);if('loading'!==document.readyState)c();else if(window.addEventListener)document.addEventListener('DOMContentLoaded',c);else{var e=document.onreadystatechange||function(){};document.onreadystatechange=function(b){e(b);'loading'!==document.readyState&&(document.onreadystatechange=e,c())}}}})();</script></body>
 </html>
+
 
 
